--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,5 +1,5 @@
 {
-    "Nguyen Viet Xuan": "Xuan Nguyen Viet",
-    "Welcome to React": "Welcome to React and react-i18next",
-    "Male": "Male"
+    "name": "Xuan Nguyen Viet",
+    "dob": "Oct 07, 1997",
+    "gender": "Male"
 }
