--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -4,5 +4,7 @@
     "gender": "Nam",
     "introduce.1": "Áp dụng kiến thức về Full-stack Javascript vào dự án thực tế.",
     "introduce.2": "Mong muốn được làm việc trong môi trường chuyên nghiệp.",
-    "introduce.3": "Học hỏi và cải thiện trải nghiệm chuyên môn của tôi và các kỹ năng khác, đặc biệt là về Javascript (Reactjs, Nodejs, Expressjs)."
+    "introduce.3": "Học hỏi và cải thiện trải nghiệm chuyên môn của tôi và các kỹ năng khác, đặc biệt là về Javascript (Reactjs, Nodejs, Expressjs).",
+    "download": "Tải CV",
+    "view": "Xem bảng điểm"
 }
