--- a/public/locales/en/nav.json
+++ b/public/locales/en/nav.json
@@ -1,5 +1,6 @@
 {
     "about": "About me",
     "resume": "Resume",
-    "contact": "Contact"
+    "contact": "Contact",
+    "language": "Language"
 }
