--- a/public/locales/vn/nav.json
+++ b/public/locales/vn/nav.json
@@ -1,5 +1,6 @@
 {
     "about": "Giới thiệu",
     "resume": "Tóm tắt",
-    "contact": "Liên hệ"
+    "contact": "Liên hệ",
+    "language": "Ngôn ngữ"
 }
