--- a/public/locales/en/nav.json
+++ b/public/locales/en/nav.json
@@ -2,5 +2,5 @@
     "about": "About me",
     "resume": "Resume",
     "contact": "Contact",
-    "language": "Language"
+    "language": "English"
 }
