--- a/public/locales/vn/nav.json
+++ b/public/locales/vn/nav.json
@@ -2,5 +2,5 @@
     "about": "Giới thiệu",
     "resume": "Tóm tắt",
     "contact": "Liên hệ",
-    "language": "Ngôn ngữ"
+    "language": "Tiếng việt"
 }
