--- a/public/locales/en/notfound.json
+++ b/public/locales/en/notfound.json
@@ -1,3 +1,5 @@
 {
-    "content": "It looks like nothing was found at this location."
+  "title": "Not found",
+  "description": "It looks like nothing was found at this location.",
+  "content": "It looks like nothing was found at this location."
 }
