--- a/public/locales/en/resume.json
+++ b/public/locales/en/resume.json
@@ -1,37 +1,38 @@
 {
-    "title": "Resume",
-    "education": "Education",
-    "education.period": "2015 - 2020",
-    "education.school": "University of Information Technology (UIT)",
-    "education.major": "Information Security",
-    "education.detail": "Learn about malware analysis, system testing, Vulnerability Analysis, Firewalls, IDS/IPS system, etc.",
-    "experience": "Experience",
-    "experience.1.period": "JULY 2018 - SEP 2018",
-    "experience.1.company": "Certified Network Security Center (CNSC)",
-    "experience.1.position": "Interns",
-    "experience.1.detail.1": "Experienced in doing research with lectures.",
-    "experience.1.detail.2": "Experienced in using Django and Flask to write API",
-    "experience.2.period": "JULY 2018 - Now",
-    "experience.2.company": "Thai Binh Engineering and Trading",
-    "experience.2.position": "Freelancer",
-    "experience.2.detail.1": "Web application development with Django",
-    "experience.2.detail.2": "Web application development with Reactjs and Material UI",
-    "experience.2.detail.3": "System management",
-    "experience.2.detail.4": "It help desk",
-    "experience.3.period": "OCT 2019 - DEC 2019",
-    "experience.3.company": "Beesight Soft",
-    "experience.3.position": "Fresher Reactjs",
-    "experience.3.detail.1": "Co-ordinated with ReactJS in doing projects.",
-    "experience.4.period": "MAR 2020 - Now",
-    "experience.4.company": "TMA Solutions",
-    "experience.4.position": "Engineer",
-    "experience.4.detail.1": "Co-ordinated with AngularJs in doing projects.",
-    "skills": "Skills",
-    "skills.1": "Programming language: Javascript ,Python, C++, C#.",
-    "skills.2": "Basic knowledge: Object Oriented Programming (OOP), Structured Query Language (SQL), NoSQL (MongoDB), HTML, CSS, SASS, Bootstrap, Linux, Git and Github, Socket IO, Material UI, Deploy web app.",
-    "skills.3": "Framework: ReactJS, Django, Flask.",
-    "skills.4": "Platform: Nodejs.",
-    "skills.5": "Knowledgedgeable in information security.",
-    "skills.6": "Skilled in teamwork.",
-    "skills.7": "Dynamic in adopting new technology into working."
+  "title": "Resume",
+  "description": "Education, skills, work ...",
+  "education": "Education",
+  "education.period": "2015 - 2020",
+  "education.school": "University of Information Technology (UIT)",
+  "education.major": "Information Security",
+  "education.detail": "Learn about malware analysis, system testing, Vulnerability Analysis, Firewalls, IDS/IPS system, etc.",
+  "experience": "Experience",
+  "experience.1.period": "JULY 2018 - SEP 2018",
+  "experience.1.company": "Certified Network Security Center (CNSC)",
+  "experience.1.position": "Interns",
+  "experience.1.detail.1": "Experienced in doing research with lectures.",
+  "experience.1.detail.2": "Experienced in using Django and Flask to write API",
+  "experience.2.period": "JULY 2018 - Now",
+  "experience.2.company": "Thai Binh Engineering and Trading",
+  "experience.2.position": "Freelancer",
+  "experience.2.detail.1": "Web application development with Django",
+  "experience.2.detail.2": "Web application development with Reactjs and Material UI",
+  "experience.2.detail.3": "System management",
+  "experience.2.detail.4": "It help desk",
+  "experience.3.period": "OCT 2019 - DEC 2019",
+  "experience.3.company": "Beesight Soft",
+  "experience.3.position": "Fresher Reactjs",
+  "experience.3.detail.1": "Co-ordinated with ReactJS in doing projects.",
+  "experience.4.period": "MAR 2020 - Now",
+  "experience.4.company": "TMA Solutions",
+  "experience.4.position": "Engineer",
+  "experience.4.detail.1": "Co-ordinated with AngularJs in doing projects.",
+  "skills": "Skills",
+  "skills.1": "Programming language: Javascript ,Python, C++, C#.",
+  "skills.2": "Basic knowledge: Object Oriented Programming (OOP), Structured Query Language (SQL), NoSQL (MongoDB), HTML, CSS, SASS, Bootstrap, Linux, Git and Github, Socket IO, Material UI, Deploy web app.",
+  "skills.3": "Framework: ReactJS, Django, Flask.",
+  "skills.4": "Platform: Nodejs.",
+  "skills.5": "Knowledgedgeable in information security.",
+  "skills.6": "Skilled in teamwork.",
+  "skills.7": "Dynamic in adopting new technology into working."
 }
