--- a/public/locales/vn/about.json
+++ b/public/locales/vn/about.json
@@ -1,16 +1,18 @@
 {
-    "name": "Nguyễn Viết Xuân",
-    "dob": "07/10/1997",
-    "gender": "Nam",
-    "introduce.1": "Áp dụng kiến thức về Full-stack Javascript vào dự án thực tế.",
-    "introduce.2": "Mong muốn được làm việc trong môi trường chuyên nghiệp.",
-    "introduce.3": "Học hỏi và cải thiện trải nghiệm chuyên môn của tôi và các kỹ năng khác, đặc biệt là về Javascript (Reactjs, Nodejs, Expressjs).",
-    "download": "Tải CV",
-    "view": "Xem bảng điểm",
-    "do": "Những gì tôi làm",
-    "do.web": "Thiết kế Website",
-    "do.web.content.1": "Kinh nghiệm 1 năm Freelancer Full-stack Python Django.",
-    "do.web.content.2": "Kinh nghiệm 6 tháng Freelancer với ReactJS.",
-    "do.admin": "Quản trị hệ thống",
-    "do.admin.content": "Quán trị hệ thống cho ThaiBinh service."
+  "title": "Thông tin cá nhân",
+  "description": "Tất cả thông tin về tôi",
+  "name": "Nguyễn Viết Xuân",
+  "dob": "07/10/1997",
+  "gender": "Nam",
+  "introduce.1": "Áp dụng kiến thức về Full-stack Javascript vào dự án thực tế.",
+  "introduce.2": "Mong muốn được làm việc trong môi trường chuyên nghiệp.",
+  "introduce.3": "Học hỏi và cải thiện trải nghiệm chuyên môn của tôi và các kỹ năng khác, đặc biệt là về Javascript (Reactjs, Nodejs, Expressjs).",
+  "download": "Tải CV",
+  "view": "Xem bảng điểm",
+  "do": "Những gì tôi làm",
+  "do.web": "Thiết kế Website",
+  "do.web.content.1": "Kinh nghiệm 1 năm Freelancer Full-stack Python Django.",
+  "do.web.content.2": "Kinh nghiệm 6 tháng Freelancer với ReactJS.",
+  "do.admin": "Quản trị hệ thống",
+  "do.admin.content": "Quán trị hệ thống cho ThaiBinh service."
 }
