--- a/public/locales/vn/contact.json
+++ b/public/locales/vn/contact.json
@@ -1,7 +1,9 @@
 {
-    "contact": "Liên hệ",
-    "contact.detail": "Thông tin liên hệ",
-    "phone": "Số điện thoại",
-    "address": "Địa chỉ",
-    "address.detail": "Linh Chiểu, Thủ Đức, HCM."
+  "title": "Liên hệ",
+  "description": "Thông tin liên hệ với tôi",
+  "contact": "Liên hệ",
+  "contact.detail": "Thông tin liên hệ",
+  "phone": "Số điện thoại",
+  "address": "Địa chỉ",
+  "address.detail": "Linh Chiểu, Thủ Đức, HCM."
 }
