--- a/public/locales/vn/notfound.json
+++ b/public/locales/vn/notfound.json
@@ -1,3 +1,5 @@
 {
-    "content": "Có vẻ như không có gì được tìm thấy tại địa chỉ này."
+  "title": "Không tìm thấy",
+  "description": "Có vẻ như không có gì được tìm thấy tại địa chỉ này.",
+  "content": "Có vẻ như không có gì được tìm thấy tại địa chỉ này."
 }
