--- a/public/locales/en/about.json
+++ b/public/locales/en/about.json
@@ -1,16 +1,18 @@
 {
-    "name": "Xuan Nguyen Viet",
-    "dob": "Oct 07, 1997",
-    "gender": "Male",
-    "introduce.1": "To apply my knowledge in the field of Full-stack Javascript into practical use.",
-    "introduce.2": "Looking forward to working in a professional environment.",
-    "introduce.3": "To learn and to improve my professional experiences and other skills particularly of Javascript (Reactjs, Nodejs, Expressjs).",
-    "download": "Download CV",
-    "view": "View Transcript",
-    "do": "What I Do",
-    "do.web": "Web Design",
-    "do.web.content.1": "Freelancer Full-stack Python Django 1 year of experience.",
-    "do.web.content.2": "Freelancer ReactJS 6 months of practical experience.",
-    "do.admin": "System Admin",
-    "do.admin.content": "System management for ThaiBinh Service."
+  "title": "About",
+  "description": "All information about me",
+  "name": "Xuan Nguyen Viet",
+  "dob": "Oct 07, 1997",
+  "gender": "Male",
+  "introduce.1": "To apply my knowledge in the field of Full-stack Javascript into practical use.",
+  "introduce.2": "Looking forward to working in a professional environment.",
+  "introduce.3": "To learn and to improve my professional experiences and other skills particularly of Javascript (Reactjs, Nodejs, Expressjs).",
+  "download": "Download CV",
+  "view": "View Transcript",
+  "do": "What I Do",
+  "do.web": "Web Design",
+  "do.web.content.1": "Freelancer Full-stack Python Django 1 year of experience.",
+  "do.web.content.2": "Freelancer ReactJS 6 months of practical experience.",
+  "do.admin": "System Admin",
+  "do.admin.content": "System management for ThaiBinh Service."
 }
