--- a/public/locales/en/contact.json
+++ b/public/locales/en/contact.json
@@ -1,7 +1,9 @@
 {
-    "contact": "Contact",
-    "contact.detail": "Contact information",
-    "phone": "Phone number",
-    "address": "Address",
-    "address.detail": "Linh Chieu, Thu Duc, HCM."
+  "title": "Contact",
+  "description": "My contact information",
+  "contact": "Contact",
+  "contact.detail": "Contact information",
+  "phone": "Phone number",
+  "address": "Address",
+  "address.detail": "Linh Chieu, Thu Duc, HCM."
 }
